Add basic call graph construction